linux-can-dkms: Bit timing passed to compiler
* Needs to be passed to the compiler so that the #ifdef works.

--- a/linux-can-dkms/Makefile
+++ b/linux-can-dkms/Makefile
@@ -8,7 +8,7 @@ export CONFIG_CAN_GW         := m
 export CONFIG_CAN_VCAN       := m
 
 # drives/net/can
-export CONFIG_CAN_CALC_BITTIMING := y
+#export CONFIG_CAN_CALC_BITTIMING := y
 export CONFIG_CAN_DEV            := m
 export CONFIG_CAN_KVASER_USB     := m
 
@@ -17,6 +17,6 @@ SRC_DIRS := net/can drivers/net/can
 modules: $(SRC_DIRS)
 
 $(SRC_DIRS):
-	$(MAKE) -C /lib/modules/`uname -r`/build M="$(M)/$@"
+	$(MAKE) -C /lib/modules/`uname -r`/build M="$(M)/$@" subdir-ccflags-y=-DCONFIG_CAN_CALC_BITTIMING
 
 .PHONY: $(SRC_DIRS) modules
