uavcan: Fix provides/conflicts
* Packages provided and conflicted with each other.
* Whitespace clean-up.

--- a/uavcan-git/PKGBUILD
+++ b/uavcan-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=('uavcan-git' 'libuavcan-git')
 _gitname=uavcan
 pkgver=1030.f9b946a
-pkgrel=1
+pkgrel=2
 pkgdesc="UAVCAN is a lightweight protocol designed for reliable communication in aerospace and robotic applications via CAN bus (git version)"
 arch=('i686' 'x86_64')
 url="http://uavcan.org"
@@ -12,8 +12,6 @@ depends=('')
 optdepends=('can-utils')
 makedepends=('git' 'make' 'cmake')
 options=(!strip)
-provides=('uavcan' 'libuavcan')
-conflicts=('uavcan' 'libuavcan')
 source=("${_gitname}::git+https://github.com/UAVCAN/uavcan.git")
 md5sums=('SKIP')
 
@@ -28,21 +26,29 @@ build() {
   mkdir build
   cd build
 
-  cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr ..
+  cmake -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        ..
   make
 }
 
 package_uavcan-git() {
+  provides=('uavcan')
+  conflicts=('uavcan')
+
   make -C "$srcdir/${_gitname}/build" DESTDIR=${pkgdir} install
 
   # FIXME: there has to be a way to do a more selective install
-  rm -rf ${pkgdir}/usr/share \
-      ${pkgdir}/usr/src \
-      ${pkgdir}/usr/include \
-      ${pkgdir}/usr/lib
+  rm -rf ${pkgdir}/usr/include \
+         ${pkgdir}/usr/share \
+         ${pkgdir}/usr/src \
+         ${pkgdir}/usr/lib
 }
 
 package_libuavcan-git() {
+  provides=('libuavcan')
+  conflicts=('libuavcan')
+
   make -C "$srcdir/${_gitname}/build" DESTDIR=${pkgdir} install
   
   # FIXME: there has to be a way to do a more selective install
