--- a/vim-youcompleteme-git/PKGBUILD
+++ b/vim-youcompleteme-git/PKGBUILD
@@ -11,7 +11,7 @@
 # Contributor: foobster
 
 pkgname=vim-youcompleteme-git
-pkgver=1393.4436d51
+pkgver=1469.a24cc3c
 pkgver() {
   cd "YouCompleteMe"
   echo $(git rev-list --count master).$(git rev-parse --short master)
@@ -24,7 +24,7 @@ url='http://valloric.github.com/YouCompleteMe/'
 license=('GPL3')
 groups=('vim-plugins')
 depends=('vim' 'clang' 'python2')
-makedepends=('git' 'cmake' 'go' 'mono')
+makedepends=('git' 'cmake')
 provides=('vim-youcompleteme')
 conflicts=('vim-youcompleteme')
 source=('git+https://github.com/Valloric/YouCompleteMe.git'
@@ -36,12 +36,8 @@ source=('git+https://github.com/Valloric/YouCompleteMe.git'
         'git+https://github.com/slezica/python-frozendict.git'
         'git+https://github.com/davidhalter/jedi.git'
         'git+https://github.com/Pylons/waitress.git'
-        'git+https://github.com/nsf/gocode.git'
-        'git+https://github.com/nosami/OmniSharpServer.git'
-        'git+https://github.com/icsharpcode/NRefactory.git'
-        'git+https://github.com/jbevain/cecil.git'
         'git+https://github.com/amoffat/sh.git')
-sha1sums=('SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP')
+sha1sums=('SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP')
 install=install
 
 prepare() {
@@ -60,16 +56,8 @@ prepare() {
   git config submodule.third_party/frozendict.url "$srcdir/python-frozendict"
   git config submodule.third_party/jedi.url "$srcdir/jedi"
   git config submodule.third_party/waitress.url "$srcdir/waitress"
-  git config submodule.third_party/gocode.url "$srcdir/gocode"
-  git config submodule.third_party/OmniSharpServer.url "$srcdir/OmniSharpServer"
   git config submodule.third_party/requests.url "$srcdir/requests"
   git config submodule.third_party/sh.url "$srcdir/sh"
-  git submodule update
-
-  cd "$srcdir/YouCompleteMe/third_party/ycmd/third_party/OmniSharpServer"
-  git submodule init
-  git config submodule.NRefactory.url "$srcdir/NRefactory"
-  git config submodule.cecil.url "$srcdir/cecil"
   git submodule update
 }
 
@@ -78,19 +66,10 @@ build() {
   cd "$srcdir/ycmd_build"
   cmake -G "Unix Makefiles" -DUSE_SYSTEM_LIBCLANG=1 . "$srcdir/YouCompleteMe/third_party/ycmd/cpp"
   make ycm_support_libs
-
-  cd "$srcdir/YouCompleteMe/third_party/ycmd/third_party/OmniSharpServer"
-  pwd
-  xbuild
-
-  cd "$srcdir/YouCompleteMe/third_party/ycmd/third_party/gocode"
-  pwd
-  go build
 }
 
 package() {
-  mkdir -p "$pkgdir/usr/share/vim/vimfiles/third_party/ycmd/third_party/OmniSharpServer/OmniSharp/bin/Debug"
-  mkdir -p "$pkgdir/usr/share/vim/vimfiles/third_party/ycmd/third_party/gocode"
+  mkdir -p "$pkgdir/usr/share/vim/vimfiles"
 
   cp -r "$srcdir/YouCompleteMe/"{autoload,doc,plugin,python} \
     "$pkgdir/usr/share/vim/vimfiles"
@@ -100,10 +79,6 @@ package() {
     "$pkgdir/usr/share/vim/vimfiles/third_party/ycmd"
   cp -r "$srcdir/YouCompleteMe/third_party/ycmd/third_party/"{argparse,bottle,frozendict,jedi,waitress} \
     "$pkgdir/usr/share/vim/vimfiles/third_party/ycmd/third_party"
-  cp     "$srcdir/YouCompleteMe/third_party/ycmd/third_party/gocode/gocode" \
-    "$pkgdir/usr/share/vim/vimfiles/third_party/ycmd/third_party/gocode/gocode"
-  cp -r "$srcdir/YouCompleteMe/third_party/ycmd/third_party/OmniSharpServer/OmniSharp/bin/Debug" \
-    "$pkgdir/usr/share/vim/vimfiles/third_party/ycmd/third_party/OmniSharpServer/OmniSharp/bin"
 
   find "$pkgdir" -name .git -exec rm -fr {} +
 }
