aur: Add gcc-arm-none-eabi-bin
* Stolen from aur3.
* Might go away in favor of aur/arm-none-eabi-gcc49-linaro

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "python-randomio"]
 	path = python-randomio
 	url = https://aur.archlinux.org/python-randomio.git
+[submodule "gcc-arm-none-eabi-bin"]
+	path = gcc-arm-none-eabi-bin
+	url = https://aur.archlinux.org/gcc-arm-none-eabi-bin.git
