modules: Add copay v1.4.0
Initial release.

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "keepassx2-yubikey-git"]
 	path = keepassx2-yubikey-git
 	url = https://aur.archlinux.org/keepassx2-yubikey-git.git
+[submodule "copay"]
+	path = copay
+	url = https://aur.archlinux.org/copay.git
