modules: Add pyocd
* Still chasing... I forgot the name.

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "project-generator"]
 	path = project-generator
 	url = https://aur.archlinux.org/project-generator
+[submodule "pyocd"]
+	path = pyocd
+	url = https://aur.archlinux.org/pyocd
