--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "python-pyp2p"]
 	path = python-pyp2p
 	url = https://aur.archlinux.org/python-pyp2p
+[submodule "python-kademlia"]
+	path = python-kademlia
+	url = https://aur.archlinux.org/python-kademlia
