submodule: Add python-umsgpack v0.1.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "python-kademlia"]
 	path = python-kademlia
 	url = https://aur.archlinux.org/python-kademlia
+[submodule "python-umsgpack"]
+	path = python-umsgpack
+	url = https://aur.archlinux.org/python-umsgpack
