submodule: Add python-ntplib v0.3.3

--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "python-rpcudp"]
 	path = python-rpcudp
 	url = https://aur.archlinux.org/python-rpcudp
+[submodule "python-ntplib"]
+	path = python-ntplib
+	url = https://aur.archlinux.org/python-ntplib
