submodule: Add python-crochet v1.4.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "python-storjnode"]
 	path = python-storjnode
 	url = https://aur.archlinux.org/python-storjnode
+[submodule "python-crochet"]
+	path = python-crochet
+	url = https://aur.archlinux.org/python-crochet
