sync: backblaze-b2 do-agent python-affine python-b2sdk python-can wavedrom-editor
* Basically all the things.

--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,6 @@
 [submodule "python-b2sdk"]
 	path = python-b2sdk
 	url = https://aur.archlinux.org/python-b2sdk.git
+[submodule "wavedrom-editor"]
+	path = wavedrom-editor
+	url = https://aur.archlinux.org/wavedrom-editor.git
