python-logfury: Add submodule
* Begin maintaining this as it's a dependency for backblaze b2sdk.

--- a/.gitmodules
+++ b/.gitmodules
@@ -160,3 +160,6 @@
 [submodule "blktrace"]
 	path = blktrace
 	url = https://aur.archlinux.org/blktrace.git
+[submodule "python-logfury"]
+	path = python-logfury
+	url = https://aur.archlinux.org/python-logfury
