sync: Update submodules
* Add `python-certstream`
* Update `backblaze-b2`
* Update `project-generator`
* Update `python-b2sdk`
* Update `wavedrom-editor`

--- a/.gitmodules
+++ b/.gitmodules
@@ -199,3 +199,6 @@
 [submodule "python-ouster-sdk"]
 	path = python-ouster-sdk
 	url = https://aur.archlinux.org/python-ouster-sdk.git/
+[submodule "python-certstream"]
+	path = python-certstream
+	url = https://aur.archlinux.org/python-certstream.git
