--- a/.gitmodules
+++ b/.gitmodules
@@ -202,3 +202,6 @@
 [submodule "python-certstream"]
 	path = python-certstream
 	url = https://aur.archlinux.org/python-certstream.git
+[submodule "bnx2x-2500m-dkms"]
+	path = bnx2x-2500m-dkms
+	url = https://aur.archlinux.org/bnx2x-2500m-dkms.git/
