--- a/uavcan-git/PKGBUILD
+++ b/uavcan-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=('uavcan-git' 'libuavcan-git')
 _gitname=uavcan
-pkgver=1030.f9b946a
-pkgrel=3
+pkgver=.
+pkgrel=1
 pkgdesc="UAVCAN is a lightweight protocol designed for reliable communication in aerospace and robotic applications via CAN bus (git version)"
 arch=('i686' 'x86_64')
 url="http://uavcan.org"
